# sso

./: .clang-format  .clang-tidy  .gitignore  README.md
cmake/: pedantic.cmake  sanitizer.cmake
sso/: CMakeLists.txt
sso/include/sso/: string.hpp  util.hpp
sso/include/sso/detail/: basic_string_buffer.hpp
test/: CMakeLists.txt  main.test.cpp
